--- a/Chess/GoogleService-Info.plist
+++ b/Chess/GoogleService-Info.plist
@@ -17,21 +17,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.Chess</string>
+	<string>spaghet.Chess</string>
 	<key>PROJECT_ID</key>
 	<string>chess-79b0d</string>
 	<key>STORAGE_BUCKET</key>
 	<string>chess-79b0d.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:598766440593:ios:64be4a73b337fa74</string>
 	<key>DATABASE_URL</key>
